# major-project

Backend/: .env  .gitignore  README.md  crud.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  utilis.py
Backend/app/: main.py
Backend/app/api/routes/: auth.py  items.py  register.py  users.py
Backend/app/core/: auth.py  security.py  settings.py
Backend/app/crud/: items.py  users.py
Backend/app/db/: database.py  init_db.py
Backend/app/models/: items.py  users.py
Backend/app/schemas/: items.py  users.py
